Fixed mobile optimisation gaps (v2)

--- a/css/style.css
+++ b/css/style.css
@@ -808,7 +808,7 @@ div.navbardiv {
 		padding-left: 0;
 		padding-top: 0;
 		padding-right: 0;
-		padding-bottom: 15px;
+		padding-bottom: 5px;
 	}
 	div.chatbot-text h2, p{
 		text-align: center;
@@ -834,7 +834,7 @@ div.navbardiv {
 	div.taskmanagertext h2{
 		font-size: 14pt;
 		padding-top: 0px;
-		padding-bottom: 10px;
+		padding-bottom: 5px;
 		font-family: 'Montserrat', sans-serif;
 		line-height: 1.6em;
 		color: #ffffff;
@@ -853,8 +853,8 @@ div.navbardiv {
 
 	div.websitetext h2{
 		font-size: 14pt;
-		padding-top: 20px;
-		padding-bottom: 0;
+		padding-top: 0;
+		padding-bottom: 5px;
 		font-family: 'Montserrat', sans-serif;
 		line-height: 1.6em;
 		color: #ffffff;
